Prevent image pointer events on mobile

--- a/static/landing.css
+++ b/static/landing.css
@@ -866,6 +866,10 @@ body::before {
   .spotlight-card, .spotlight-card * {
     box-sizing: border-box;
   }
+
+  img {
+    pointer-events: none
+  }
 }
 
 .spotlight-card::before {
